k8s/namspace.yml
# namespace for monitoring
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
