k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: prod
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
